--- a/Mini Calender/style.css
+++ b/Mini Calender/style.css
@@ -148,7 +148,13 @@ body {
   border-radius: 5px;
   font-family: "Poppins", sans-serif;
 }
-
+#eventForm div {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  gap: 10px;
+}
 #eventForm button {
   background-color: var(--primary-color);
   color: white;
@@ -158,6 +164,16 @@ body {
   cursor: pointer;
   transition: all 0.3s;
 }
+/* Remove this style block for the first button (Manage Events button) */
+/* #eventForm button:nth-child(1) {
+  color: var(--primary-color);
+  background-color: transparent;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.3s;
+} */
 
 #eventForm button:hover {
   background-color: #db0933;
