few changes were added in the footer

--- a/java-camp/backend/templates/index.html
+++ b/java-camp/backend/templates/index.html
@@ -46,37 +46,40 @@
   </main>
   <footer class="footer">
     <div class="footer-container">
-      <div class="footer-logo">
-        <img src="{{ url_for('static', filename='images/Java-Camp.png') }}" alt="Java-Camp Logo" class="footer-logo-img">
+  
+      <!-- Logo Section -->
+      <div class="footer-branding">
+        <img src="{{ url_for('static', filename='images/Java-Camp.png') }}" alt="Your Logo" class="footer-logo">
       </div>
   
+      <!-- Quick Links Section -->
       <div class="footer-links">
         <h3>Quick Links</h3>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Learn Java</a></li>
-          <li><a href="#">Code Playground</a></li>
-          <li><a href="#">Quizzes</a></li>
-          <li><a href="#">Projects</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/playground">Code Playground</a></li>
+          <li><a href="/about">About</a></li>
+          <li><a href="/contact">Contact</a></li>
         </ul>
       </div>
   
+      <!-- Social Media Section -->
       <div class="footer-social">
         <h3>Follow Us</h3>
         <div class="social-icons">
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-linkedin-in"></i></a>
-          <a href="#"><i class="fab fa-github"></i></a>
+          <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+          <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
         </div>
       </div>
+  
     </div>
   
     <div class="footer-bottom">
-      <p>© 2025 Java-Camp. All rights reserved.</p>
+      &copy; 2025 YourSiteName. All Rights Reserved.
     </div>
-  </footer>
+  </footer>  
 </body>
 </html>
 
