--- a/java-camp/backend/static/css/styles.css
+++ b/java-camp/backend/static/css/styles.css
@@ -201,7 +201,7 @@ p {
   background-color: #ffd683;
 }
 .footer {
-  background: linear-gradient(135deg, #569bf6, #111145);
+  background: linear-gradient(135deg, #5e82f6, #121261);
   color: white;
   padding: 50px 20px 20px;
   font-family: 'Segoe UI', sans-serif;
